<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#44F9F9F9">

        <EditText
            android:id="@+id/text_email"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_email"
            style="@style/LoginEditTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_password"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            style="@style/LoginEditTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />

        <Button
            android:id="@+id/button_login"
            style="@style/FadeLoginButton"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="24dp"
            android:onClick="onLoginClicked"
            android:text="@string/login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>